--- a/src/Component/Home/home/home.css
+++ b/src/Component/Home/home/home.css
@@ -6,6 +6,9 @@
     background-color: var(--dark);
     color: var(--light);
 }
+.mrg-40-top{
+    margin-top: 40px;
+}
 .banner{
     text-align: center;
     position: relative;
@@ -88,6 +91,9 @@
     font-weight: 900;
     text-transform: uppercase;
 }
+.sanity{
+    margin-top: 40px;
+}
 .gradient{
     color: transparent;
     background: linear-gradient(-90deg,var(--pink),var(--blue));
@@ -135,6 +141,23 @@
 .links button{
     display: none;
 }
+.basic{
+    position:absolute;
+    width: 100%;
+    font-size: small;
+    padding: 10px;
+    color: white;
+    background-size: cover;
+    background:linear-gradient(90deg,var(--blue),var(--pink-2)) ;
+    background-color: var(--blue);
+    z-index: 2;
+    margin: 0px;
+    transform: rotate(45deg);
+    text-align: center;
+    left: 38%;
+    top: 0px;
+    text-transform: uppercase;
+}
 @media screen and (max-width:826px) {
     .banner h1{
         font-size: 3em;
@@ -142,6 +165,28 @@
     .intro p{
         margin-left:50px;
         margin-right: 50px;
+    }
+}
+@media screen and (max-width:768px){
+    .sanity{
+        margin-top: 25px;
+    }
+    .basic{
+        position:absolute;
+        width: 100%;
+        font-size: x-small;
+        padding: 8px;
+        color: white;
+        background-size: cover;
+        background:linear-gradient(90deg,var(--blue),var(--pink-2)) ;
+        background-color: var(--blue);
+        z-index: 2;
+        margin: 0px;
+        transform: rotate(45deg);
+        text-align: center;
+        left: 35%;
+        top: -3%;
+        text-transform: uppercase;
     }
 }
 @media screen and (max-width:715px) {
@@ -172,6 +217,26 @@
         margin-left:0px !important;
         margin-right: 0px !important;
         font-size: 16px;
+    }
+}
+@media screen and (max-width:410px){
+    
+    .basic{
+        position:absolute;
+        width: 100%;
+        font-size: xx-small;
+        padding: 7px;
+        color: white;
+        background-size: cover;
+        background:linear-gradient(90deg,var(--blue),var(--pink-2)) ;
+        background-color: var(--blue);
+        z-index: 2;
+        margin: 0px;
+        transform: rotate(45deg);
+        text-align: center;
+        left: 32%;
+        top: -10%;
+        text-transform: lowercase;
     }
 }
 @media screen and (max-width:399px) {
