--- a/src/Component/Home/ShowCase/showcase.css
+++ b/src/Component/Home/ShowCase/showcase.css
@@ -33,7 +33,7 @@
     backdrop-filter: blur(10px);
     z-index: 4;
 }
-.foil iframe{
+.foil iframe, .card img{
     position: relative;
     z-index: 1;
 }
@@ -63,7 +63,7 @@
     text-transform: uppercase;
     text-decoration: none;
 }
-.crd iframe{
+.crd iframe, .card img{
     position: relative;
     width: 100%;
     height: 230px;
