--- a/src/Component/Home/home/home.css
+++ b/src/Component/Home/home/home.css
@@ -1,15 +1,18 @@
-*{
+* {
     transition: .3s ease-in-out;
     -webkit-transition: .3s ease-in-out;
 }
-.home{
+
+.home {
     background-color: var(--dark);
     color: var(--light);
 }
-.mrg-40-top{
+
+.mrg-40-top {
     margin-top: 40px;
 }
-.banner{
+
+.banner {
     text-align: center;
     position: relative;
     width: 100%;
@@ -18,14 +21,16 @@
     background-image: url("../../images/back.png");
     background-size: cover;
 }
-.shadows{
-    position:relative;
+
+.shadows {
+    position: relative;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.082);
     backdrop-filter: blur(0px);
 }
-.plan{
+
+.plan {
     width: 300px;
     height: 400px;
     text-align: start !important;
@@ -36,58 +41,69 @@
     border-radius: 10px;
     margin: 10px;
 }
-.plan .items{
+
+.plan .items {
     padding: 10px;
     font-size: small;
     margin: 10px;
 }
-.plan h2{
+
+.plan h2 {
     font-size: 18px;
     text-transform: uppercase;
 }
-.red{
-    background: linear-gradient(90deg,var(--pink),red) !important;
+
+.red {
+    background: linear-gradient(90deg, var(--pink), red) !important;
     background-clip: text !important;
     -webkit-background-clip: text !important;
 
 }
-.transform-translate-50-30{
+
+.transform-translate-50-30 {
     position: absolute;
     top: 25%;
     left: 50%;
     transform: translateX(-50%);
 }
-.mrg-100-top{
+
+.mrg-100-top {
     margin-top: 100px;
 }
 
-.mrg-100-btn{
+.mrg-100-btn {
     margin-bottom: 100px;
 }
-.row{
+
+.row {
     justify-content: center;
 }
-.intro{
+
+.intro {
     width: 80%;
 }
-.intro p{
-    margin-left:100px;
+
+.intro p {
+    margin-left: 100px;
     margin-right: 100px;
 }
-.banner h1{
+
+.banner h1 {
     margin-top: 10px;
     font-weight: 700;
     text-transform: capitalize;
     font-size: 4em;
     color: white;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-clip: text;
     -webkit-background-clip: text;
 }
-.headline{
+
+.headline {
     text-align: center;
 }
-.skill{
+
+.skill {
     position: relative;
     overflow: hidden;
     padding: 10px;
@@ -96,37 +112,44 @@
     background-color: var(--light);
     border-radius: 21px;
 }
-.skill:hover{
+
+.skill:hover {
     background-color: var(--wt);
 }
-.skills{
+
+.skills {
     position: relative;
     width: 100%;
     object-fit: cover;
     border-radius: 20px;
 }
-.title{
+
+.title {
     margin: 10px;
     margin-top: 100px;
     font-weight: 900;
     text-transform: uppercase;
 }
-.sanity{
+
+.sanity {
     margin-top: 40px;
 }
-.gradient{
+
+.gradient {
     color: transparent;
-    background: linear-gradient(-90deg,var(--pink),var(--blue));
+    background: linear-gradient(-90deg, var(--pink), var(--blue));
     background-clip: text;
     -webkit-background-clip: text;
 }
-.banner p{
-    font-size:large;
+
+.banner p {
+    font-size: large;
 }
-.button button{
+
+.button button {
     padding: 15px;
     outline: none;
-    background: linear-gradient(-20deg,var(--pink),transparent);
+    background: linear-gradient(-20deg, var(--pink), transparent);
     background-color: var(--blue);
     color: var(--wt);
     text-align: center;
@@ -135,10 +158,11 @@
     margin: 10px;
     text-transform: uppercase;
 }
-.button button:hover{
+
+.button button:hover {
     padding: 15px;
     outline: none;
-    background: linear-gradient(-20deg,var(--pink-2),transparent);
+    background: linear-gradient(-20deg, var(--pink-2), transparent);
     background-color: var(--blue-2);
     color: var(--wt);
     text-align: center;
@@ -146,29 +170,34 @@
     border: none;
     margin: 10px;
 }
-.button.mrg-10-10{
+
+.button.mrg-10-10 {
     margin-top: 20px;
 }
-.button.btns .link{
+
+.button.btns .link {
     background-color: var(--drk-g);
     padding: 10px;
     font-size: small;
     text-transform: uppercase;
 }
-.button.btns .link:hover{
-    background-color:var(--blue);
+
+.button.btns .link:hover {
+    background-color: var(--blue);
 }
-.links button{
+
+.links button {
     display: none;
 }
-.basic{
-    position:absolute;
+
+.basic {
+    position: absolute;
     width: 100%;
     font-size: small;
     padding: 10px;
     color: white;
     background-size: cover;
-    background:linear-gradient(90deg,var(--blue),var(--pink-2)) ;
+    background: linear-gradient(90deg, var(--blue), var(--pink-2));
     background-color: var(--blue);
     z-index: 2;
     margin: 0px;
@@ -178,56 +207,187 @@
     top: 0px;
     text-transform: uppercase;
 }
-.card_Case .description h3{
+
+.card_Case .description h3 {
     text-transform: uppercase;
     text-align: center;
     font-weight: 900;
 
 }
-.card_Case .description{
+
+.card_Case .description {
     text-align: center;
 }
-.card_Case ul li{
+
+.card_Case ul li {
     list-style: none;
     margin-left: -10px;
     text-align: center;
     display: flex;
     gap: 4;
 }
-.card_Case span{
+
+.card_Case span {
     margin-top: 5px;
 }
-.LBTN{
+
+.LBTN {
     border: none;
     outline: none;
 }
-.show{
+
+.show {
     display: block;
 }
-.hide{
+
+.hide {
     display: none;
 }
+
+.contact {
+    position: relative;
+    width: 100%;
+}
+
+.contact h1 {
+    text-align: center;
+}
+
+.contact img {
+    width: 400px;
+    border-radius: 10px;
+}
+
+.contact .clipper {
+    width: 150px;
+    height: 150px;
+    padding: 10px;
+    background-color: white;
+    position: absolute;
+    border-radius: 10px;
+    left: 40%;
+    background: linear-gradient(60deg, purple, rgb(158, 0, 0));
+    top: 80%;
+    transform: translate(-40%, -50%);
+    z-index: 1;
+}
+
+.box_contact {
+    background-color: rgb(158, 0, 0);
+    padding: 10px;
+    background: linear-gradient(-60deg, purple, rgb(158, 0, 0));
+    border-radius: 10px;
+}
+
+.box_contact iframe {
+    width: 100%;
+    border-radius: 10px;
+    height: 300px;
+    scrolling: no;
+}
+
+.textme {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    gap: 4;
+}
+
+.textme input,
+.textme textarea {
+    background-color: rgba(255, 255, 255, 0.336);
+    border: none;
+    box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.342);
+    text-align: center;
+    color: rgb(183, 0, 255);
+    width: 100%;
+    margin: 10px;
+    border-radius: 10px;
+    outline: none;
+    border: 2px solid rgba(0, 0, 0, 0);
+    text-transform: uppercase;
+    font-size: small;
+    padding: 10px;
+}
+
+.textme input::placeholder {
+    color: black;
+}
+
+.textme textarea {
+    resize: none;
+    height: 100px;
+    text-transform: capitalize;
+}
+
+.textme button {
+    border: none;
+    text-align: center;
+    margin: 10px;
+    border-radius: 10px;
+    outline: none;
+    padding: 15px;
+    color: rgb(255, 255, 255);
+    font-size: small;
+    text-transform: uppercase;
+    background: black;
+    width: 100px;
+}
+
+@media screen and (max-width:991px) {
+    .contact .clipper {
+        width: 150px;
+        height: 150px;
+        padding: 10px;
+        background-color: white;
+        position: absolute;
+        border-radius: 10px;
+        left: 20%;
+        background: linear-gradient(60deg, purple, rgb(158, 0, 0));
+        top: 30%;
+        transform: translate(-20%, -30%);
+        z-index: 1;
+    }
+
+}
+
 @media screen and (max-width:826px) {
-    .banner h1{
+    .banner h1 {
         font-size: 3em;
     }
-    .intro p{
-        margin-left:50px;
+
+    .intro p {
+        margin-left: 50px;
         margin-right: 50px;
     }
 }
-@media screen and (max-width:768px){
-    .sanity{
+
+@media screen and (max-width:768px) {
+    .contact .clipper {
+        width: 150px;
+        height: 150px;
+        padding: 10px;
+        background-color: white;
+        position: absolute;
+        border-radius: 10px;
+        left: 80%;
+        background: linear-gradient(60deg, purple, rgb(158, 0, 0));
+        top: 10%;
+        transform: translate(-80%, -10%);
+        z-index: 1;
+    }
+    .sanity {
         margin-top: 25px;
     }
-    .basic{
-        position:absolute;
+
+    .basic {
+        position: absolute;
         width: 100%;
         font-size: x-small;
         padding: 8px;
         color: white;
         background-size: cover;
-        background:linear-gradient(90deg,var(--blue),var(--pink-2)) ;
+        background: linear-gradient(90deg, var(--blue), var(--pink-2));
         background-color: var(--blue);
         z-index: 2;
         margin: 0px;
@@ -238,46 +398,85 @@
         text-transform: uppercase;
     }
 }
+
 @media screen and (max-width:715px) {
-    .links ul{
+    .links ul {
         display: none;
     }
-    .banner{
+
+    .banner {
         background-position-x: calc(100% - 60%);
     }
-    .links button{
+
+    .links button {
         display: block;
         float: right;
         margin: 10px;
         width: 50px;
         height: 50px;
-        background: linear-gradient(40deg,var(--pink),transparent);
+        background: linear-gradient(40deg, var(--pink), transparent);
         background-color: var(--blue);
         border: none;
         color: white;
         border-radius: 10px;
     }
 }
+
 @media screen and (max-width:550px) {
-    .banner h1{
+    .banner h1 {
         font-size: 2.5em;
     }
-    .intro p{
-        margin-left:0px !important;
+    .contact img {
+        width: 300px;
+        border-radius: 10px;
+    }
+    .contact .clipper {
+        width: 100px;
+        height: 100px;
+        padding: 10px;
+        background-color: white;
+        position: absolute;
+        border-radius: 10px;
+        left: 80%;
+        background: linear-gradient(60deg, purple, rgb(158, 0, 0));
+        top: 10%;
+        transform: translate(-80%, -10%);
+        z-index: 1;
+    }
+    .intro p {
+        margin-left: 0px !important;
         margin-right: 0px !important;
         font-size: 16px;
     }
 }
-@media screen and (max-width:410px){
-    
-    .basic{
-        position:absolute;
+
+@media screen and (max-width:410px) {
+
+    .contact img {
+        width: 300px;
+        border-radius: 10px;
+    }
+    .contact .clipper {
+        width: 100px;
+        height: 100px;
+        padding: 10px;
+        background-color: white;
+        position: absolute;
+        border-radius: 10px;
+        left: 96%;
+        background: linear-gradient(60deg, purple, rgb(158, 0, 0));
+        top: 10%;
+        transform: translate(-96%, -10%);
+        z-index: 1;
+    }
+    .basic {
+        position: absolute;
         width: 100%;
         font-size: xx-small;
         padding: 7px;
         color: white;
         background-size: cover;
-        background:linear-gradient(90deg,var(--blue),var(--pink-2)) ;
+        background: linear-gradient(90deg, var(--blue), var(--pink-2));
         background-color: var(--blue);
         z-index: 2;
         margin: 0px;
@@ -288,12 +487,31 @@
         text-transform: lowercase;
     }
 }
+
 @media screen and (max-width:399px) {
-    .banner h1{
+    .banner h1 {
         font-size: 2em;
     }
-    .intro p{
-        margin-left:0px !important;
+
+    .contact img {
+        width: 250px;
+        border-radius: 10px;
+    }
+    .contact .clipper {
+        width: 60px;
+        height: 60px;
+        padding: 10px;
+        background-color: white;
+        position: absolute;
+        border-radius: 10px;
+        left: 95%;
+        background: linear-gradient(60deg, purple, rgb(158, 0, 0));
+        top: 10%;
+        transform: translate(-95%, -10%);
+        z-index: 1;
+    }
+    .intro p {
+        margin-left: 0px !important;
         margin-right: 0px !important;
         font-size: 16px;
     }
