--- a/src/Component/Home/home/home.css
+++ b/src/Component/Home/home/home.css
@@ -299,7 +299,7 @@
     border: none;
     box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.342);
     text-align: center;
-    color: rgb(183, 0, 255);
+    color: rgb(0, 0, 0);
     width: 100%;
     margin: 10px;
     border-radius: 10px;
@@ -320,7 +320,8 @@
     text-transform: capitalize;
 }
 
-.textme button {
+.textme a,.textme button{
+    text-decoration: none;
     border: none;
     text-align: center;
     margin: 10px;
@@ -331,6 +332,20 @@
     font-size: small;
     text-transform: uppercase;
     background: black;
+    display: none;
+    width: 100px;
+}.textme:hover a,.textme:hover button{
+    text-decoration: none;
+    border: none;
+    text-align: center;
+    margin: 10px;
+    border-radius: 10px;
+    outline: none;
+    padding: 15px;
+    color: rgb(255, 255, 255);
+    font-size: small;
+    text-transform: uppercase;
+    background: rgb(19, 19, 19);
     width: 100px;
 }
 .box_contact {
@@ -349,6 +364,15 @@
 }
 .mrg-btn-100{
     margin-bottom: 100px;
+}
+.error{
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
+    min-height: 0px;
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    font-size: small;
 }
 @media screen and (max-width:991px) {
     .contact .clipper {
