--- a/src/Component/Home/home/home.css
+++ b/src/Component/Home/home/home.css
@@ -94,7 +94,8 @@
     text-transform: capitalize;
     font-size: 4em;
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    
     background-clip: text;
     -webkit-background-clip: text;
 }
