--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Tektur&display=swap');
+
+html, body{
+    font-family: 'Tektur', cursive !important;
+}
 :root{
     --dark:rgb(0, 0, 0);
     --wt:white;
