--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Tektur&display=swap');
-
+@font-face {
+    font-family: 'Tektur';
+    src: url(./Assets/Tektur-VariableFont_wdth\,wght.ttf);
+}
 html, body{
     font-family: 'Tektur', cursive !important;
 }
@@ -7,7 +10,7 @@ html, body{
     --dark:rgb(0, 0, 0);
     --wt:white;
     --light:rgb(206, 206, 206);
-    --pink:rgb(162, 0, 255);
+    --pink:rgb(255, 0, 76);
     --blue:rgb(11, 109, 255);
     --pink-2:rgb(156, 19, 88);
     --blue-2:rgb(5, 5, 133);
