--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ html, body{
     border-radius: 50px;
 }
 .barge{
-    width: 180px;
+    width: 200px;
     position: relative;
     height: 200px;
     border-radius: 10px;
@@ -59,6 +59,8 @@ html, body{
 .barge .image{
     position: relative;
     width: 100%;
+    padding: 10px;
+    overflow: hidden;
     height: 100%;
 }
 .barge img{
@@ -66,5 +68,7 @@ html, body{
     width: 100%;
     border-radius: 10px;
     height: 100%;
+    filter: hue-rotate(150deg);
+    border: 5px solid var(--pink-2);
     object-fit: cover;
 }
