--- a/src/Component/Home/home/home.css
+++ b/src/Component/Home/home/home.css
@@ -26,7 +26,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.815);
+    background-color: rgba(0, 0, 0, 0.778);
     backdrop-filter: blur(0px);
 }
 
@@ -109,6 +109,8 @@
     overflow: hidden;
     padding: 10px;
     margin: 10px;
+    width: 80px;
+    height: 80px;
     transition: 1s ease-in-out;
     background-color: var(--light);
     border-radius: 21px;
@@ -121,7 +123,8 @@
 .skills {
     position: relative;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    height: 100%;
     border-radius: 20px;
 }
 
@@ -148,28 +151,33 @@
 }
 
 .button button {
-    padding: 15px;
+    padding: 20px;
+    min-width: 240px;
     outline: none;
     background: linear-gradient(-20deg, var(--pink), transparent);
     background-color: var(--blue);
     color: var(--wt);
     text-align: center;
-    border-radius: 10px;
+    border-radius: 50px;
     border: none;
-    margin: 10px;
+    margin: 20px;
+    transition: 1s ease-in-out !important;
+    font-size: small;
     text-transform: uppercase;
 }
 
 .button button:hover {
-    padding: 15px;
+    padding: 20px;
     outline: none;
+    min-width: 240px;
     background: linear-gradient(-20deg, var(--pink-2), transparent);
     background-color: var(--blue-2);
     color: var(--wt);
     text-align: center;
-    border-radius: 10px;
+    transition: 1s ease-in-out !important;
+    border-radius: 50px;
     border: none;
-    margin: 10px;
+    margin: 20px;
 }
 
 .button.mrg-10-10 {
@@ -375,6 +383,36 @@
     border-radius: 10px;
     font-size: small;
 }
+.absolute_scroller{
+    position: fixed;
+    top: 90%;
+    left: 50%;
+    transform: translate(-90%, -50%);
+}
+.absolute_scroller button{
+    padding: 12px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 50px;
+    border: none !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width:991px) {
     .contact .clipper {
         width: 150px;
