--- a/src/Component/Home/navigator/nav.css
+++ b/src/Component/Home/navigator/nav.css
@@ -24,7 +24,7 @@
 }
 .logo_img{
     text-transform: uppercase;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Tektur', cursive !important;
     font-weight: 900;
     color: white;
     margin: 10px;
